NOTICK: Select correct JDK using Gradle Toolchains. (#162)